--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
 					<div class="brown"><img src ="questionmark.png" id="location3"  class="restrict-img-size" onclick="code3(this)"/>
 					</div>
 					<div class="orange center-content">
-					<img src="spaceship1.png" class="restrict-img-size1" onclick ="checkImages()"/> 
+					<img src="spaceship1.png" class="restrict-img-size1" id="spaceship" onclick ="checkImages(this)"/> 
 		<progress value="0" max="40" id="progressBar"></progress>
 						</div>  
 					</div>
