--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,9 @@
 					<div class="brown"><img src ="questionmark.png" id="location3"  class="restrict-img-size" onclick="code3(this)"/>
 					</div>
 					<div class="orange center-content">
+					//this is the spaceship image where I have called the js function where it says "onclick"
 					<img src="spaceship1.png" class="restrict-img-size1" id="spaceship" onclick ="checkImages(this)"/> 
+						//the progress bar value what is the lowest to highest number it will go to.
 		<progress value="0" max="40" id="progressBar"></progress>
 						</div>  
 					</div>
@@ -27,6 +29,7 @@
 			
 		<div class="blue">
 			<div class="black center-content">
+				//all these images below are in different divs and have a image in it
 				<img src="pic1.jpg"  class="restrict-img-size" id="pic1" onclick="nextImage(this)"/>
 			</div>
 			<div class="black  center-content">
