--- a/index1.html
+++ b/index1.html
@@ -18,11 +18,11 @@
 					<div class="brown"><img src ="questionmark.png" id="location3"  class="restrict-img-size" onclick="code3(this)"/>
 					</div>
 					<div class="orange center-content">
-					//this is the spaceship image where I have called the js function where it says "onclick"
-					//when this spaceship image is clicked when the user matches the code, it will take them to the second page.
-					<img src="spaceship1.png" class="restrict-img-size1" id="spaceship" onclick ="checkImages(this)"/> 
-						//the progress bar value is indicated here: the lowest to highest number it will go to.
-						//I gave it an id to call it by name on the javascript
+					<!--this is the spaceship image where I have called the js function where it says "onclick"-->
+					<!--when this spaceship image is clicked when the user matches the code, it will take them to the second page.-->
+					<img src="spaceship1.png" class="restrict-img-size1" id="spaceship" onclick ="checkImages(this)"/> -->
+						<!--the progress bar value is indicated here: the lowest to highest number it will go to.-->
+						<!--I gave it an id to call it by name on the javascript.-->
 		<progress value="0" max="40" id="progressBar"></progress>
 						</div>  
 					</div>
@@ -31,10 +31,10 @@
 			
 		<div class="blue">
 			<div class="black center-content">
-				//all these images below are in different divs
-				//they are all the same size and are essential to this game becuase within those images are the hidden code.
-				//Each image has a onclick element called by nextImage(#) that function is called through here. 
-				//so it causes the images to change to a different one when clicked on.
+				<!--all these images below are in different divs-->
+				<!--they are all the same size and are essential to this game becuase within those images are the hidden code.-->
+				<!--Each image has a onclick element called by nextImage(#) that function is called through here.--> 
+				<!--so it causes the images to change to a different one when clicked on.-->
 				<img src="pic1.jpg"  class="restrict-img-size" id="pic1" onclick="nextImage(this)"/>
 			</div>
 			<div class="black  center-content">
@@ -53,7 +53,7 @@
 			<img src="pic6.jpg" class="restrict-img-size"id="pic6" onclick="nextImage5(this)"/>
 			</div>
 		</div>
-		//this is the audio that played when the user matched the correct images a sound would play. 
+		<!--this is the audio that played when the user matched the correct images a sound would play.--> 
 		<audio src="Scanner.mp3" type="audio/mp3" id="there-found"></audio>
 		<script src="script1.js"></script>
 	</body>
